# udacity-sdce

Behavioral Cloning-P4/: writeup.md
Behavioral Cloning-P4/main/: drive2.py  main.py  model.py
CarND-Advanced-Lane-Lines-P2/: writeup.md
CarND-Advanced-Lane-Lines-P2/main/: calibrate.py  lane.py  lanes.py  main.py  params.py  perspective.py  pipeline.py
CarND-Capstone-P9/: README.md
CarND-Capstone-P9/ros/src/tl_detector/: tl_detector.py
CarND-Capstone-P9/ros/src/tl_detector/light_classification/: model.py  tl_classifier.py  train.py
CarND-Capstone-P9/ros/src/twist_controller/: dbw_node.py  params.py  twist_controller.py
CarND-Capstone-P9/ros/src/waypoint_updater/: waypoint_updater.py
CarND-LaneLines-P1/: P1.ipynb  writeup.md
CarND-PID-Control-Project-P8/: README.md  coordinateAscent.ipynb
CarND-PID-Control-Project-P8/src/: PID.cpp  PID.h  main.cpp
CarND-Path-Planning-Project-P7/: README.md
CarND-Path-Planning-Project-P7/src/: CMakeLists.txt  main.cpp  road.cpp  road.h  vehicle.cpp  vehicle.h
CarND-Traffic-Sign-Classifier-Project-P3/: Traffic_Sign_Classifier.ipynb  report.html  writeup.md
Kalman_Filter-P5/: README.md
Kalman_Filter-P5/src/: CMakeLists.txt  FusionEKF.cpp  FusionEKF.h  kalman_filter.cpp  kalman_filter.h  measurement_package.h  tools.cpp  tools.h
Kidnapped_vehicle-P6/: README.md
Kidnapped_vehicle-P6/src/: CMakeLists.txt  helper_functions.h  particle_filter.cpp  particle_filter.h
